First tests and changes in relation to improvements to the algorithm, alongside other changes

--- a/Map Data/LeagueGate.yml
+++ b/Map Data/LeagueGate.yml
@@ -72,7 +72,7 @@ Location:
     -
         Name: League Gate
         FileName: VictoryRoadGate.asm
-        Type: Map
+        Type: Border
         HasPKMN: No
         WildTableList: 
         LocationReqs:
