--- a/Map Data/SpecialFlagsMostMapAccess.yml
+++ b/Map Data/SpecialFlagsMostMapAccess.yml
@@ -12,7 +12,7 @@ Location:
             - Ecruteak City
         FlagReqs:
         RecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Hive Badge
             - Plain Badge
             - Fog Badge
