--- a/Modifiers/Convenience/Repeat Visits/NoDoubleDippingRadioTower.yaml
+++ b/Modifiers/Convenience/Repeat Visits/NoDoubleDippingRadioTower.yaml
@@ -4,7 +4,7 @@ Changes:
     -
         Location: Radio Tower
         AddRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
         AddRecommendedItemReqs:
             - Card Key
             
