--- a/Modifiers/Convenience/Strong Fights/DefinitelyNoEarlySabrina.yml
+++ b/Modifiers/Convenience/Strong Fights/DefinitelyNoEarlySabrina.yml
@@ -4,7 +4,7 @@ Changes:
     -
         Location: Saffron City Gym Badge
         AddRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Early Sabrina
