--- a/Modifiers/Convenience/Strong Fights/NoEarlyBasement.yml
+++ b/Modifiers/Convenience/Strong Fights/NoEarlyBasement.yml
@@ -13,5 +13,5 @@ Changes:
     -
         Location: Goldenrod Underground Switch Room Warpie
         AddRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
 
