--- a/Map Data/WarpCrossoverData.yml
+++ b/Map Data/WarpCrossoverData.yml
@@ -814,7 +814,7 @@ Location:
             - Mahogany
         ItemReqs:
         FlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
         FlagsSet:
         ReachableReqs:
         WildTableList:
