--- a/Modifiers/Auto/Route44AccessFromMahogany.yml
+++ b/Modifiers/Auto/Route44AccessFromMahogany.yml
@@ -4,7 +4,7 @@ Changes:
     -
         Location: Mahogany 7 Badges
         RemoveFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
 
 IncompatibleWithout:
     - 'Warps'
