--- a/Modifiers/Convenience/Strong Fights/NoEarlyRBYKantoGymLeaders.yml
+++ b/Modifiers/Convenience/Strong Fights/NoEarlyRBYKantoGymLeaders.yml
@@ -4,48 +4,48 @@ Changes:
     -
         Location: Saffron City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Cinnabar Island Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Viridian City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Pewter City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Cerulean City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Celadon City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Vermilion City Gym Badge
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
     -
         Location: Vermilion Gym via Surf
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
             - Fog Badge
     -
         Location: Vermilion Gym via Cut
         NewRecommendedFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Kanto Mode
             - Hive Badge
     -
