--- a/Modifiers/Old Modifiers/ForceEarlyFly.yml
+++ b/Modifiers/Old Modifiers/ForceEarlyFly.yml
@@ -26,7 +26,7 @@ Changes:
         NewItemReqs:
             - Fly
         NewFlagReqs:
-            - Rocket Invasion
+            - Rocket Invasion Active
             - Storm Badge
     -
         Location: Diglett's Cave
