--- a/Map Data/RuinsOfAlph.yml
+++ b/Map Data/RuinsOfAlph.yml
@@ -217,10 +217,38 @@ Location:
                 WarpReqs: Ho-Oh Chamber
                 Sublocations:
 
-
-
-
-
+            -
+                Name: Ruins of Alph Rope Chamber Access No Shopsanity
+                FileName:
+                Type: Map
+                HasPKMN: No
+                WildTableList:
+                LocationReqs: Ruins of Alph
+                FlagReqs:
+                ItemReqs:
+                FlagsSet:
+                ReachableReqs:
+                Code:
+                Text:
+                TrainerList:
+                WarpReqs:
+                Sublocations:
+            -
+                Name: Ruins of Alph Rope Chamber Access
+                FileName:
+                Type: Map
+                HasPKMN: No
+                WildTableList:
+                LocationReqs: Ruins of Alph Rope Chamber Access No Shopsanity
+                FlagReqs:
+                ItemReqs:
+                FlagsSet:
+                ReachableReqs:
+                Code:
+                Text:
+                TrainerList:
+                WarpReqs:
+                Sublocations:
             -
                 Name: Ruins of Alph Rope Chamber Access
                 FileName:
@@ -463,7 +491,7 @@ Location:
                         TrainerList: 
                         Sublocations:
             -
-                Name: Ruins of Alph Water Chamber Access
+                Name: Ruins of Alph Water Chamber Access No Shopsanity
                 FileName:
                 Type: Map
                 HasPKMN: No
@@ -484,7 +512,23 @@ Location:
                 Text:
                 TrainerList:
                 Sublocations:
-
+            -
+                Name: Ruins of Alph Water Chamber Access
+                FileName:
+                Type: Map
+                HasPKMN: No
+                WildTableList:
+                LocationReqs:
+                  - Ruins of Alph Water Chamber Access No Shopsanity
+                FlagReqs:
+                ItemReqs:
+                FlagsSet:
+                NormalItem:
+                ReachableReqs:
+                Code:
+                Text:
+                TrainerList:
+                Sublocations:
             -
                 Name: Ruins of Alph Water Chamber Access
                 FileName:
