--- a/Map Data/SSAqua.yml
+++ b/Map Data/SSAqua.yml
@@ -53,6 +53,23 @@ Location:
         Code:
         Text:
         Sublocations:
+
+    -
+        Name: Board SS Aqua
+        FileName: FastShipCabins_SE_SSE_CaptainsCabin.asm
+        Type: Map
+        HasPKMN: No
+        WildTableList:
+        LocationReqs:
+            - SS Aqua Entrance
+        FlagReqs:
+        ItemReqs:
+        FlagsSet:
+        ReachableReqs:
+        Code:
+        Text:
+        Sublocations:
+
     -
         Name: SS Aqua via Vermilion
         FileName: FastShipCabins_SE_SSE_CaptainsCabin.asm
@@ -78,7 +95,7 @@ Location:
         Type: Map
         HasPKMN: No
         WildTableList:
-        LocationReqs: SS Aqua Entrance
+        LocationReqs: Board SS Aqua
         FlagReqs:
         ItemReqs:
         FlagsSet:
@@ -95,7 +112,7 @@ Location:
         Type: Map
         HasPKMN: No
         WildTableList:
-        LocationReqs: SS Aqua Entrance
+        LocationReqs: Board SS Aqua
         FlagReqs:
             - Sailor Working
         ItemReqs:
@@ -112,7 +129,7 @@ Location:
         Type: Map
         HasPKMN: No
         WildTableList:
-        LocationReqs: SS Aqua Entrance
+        LocationReqs: Board SS Aqua
         FlagReqs:
         ItemReqs:
         FlagsSet:
@@ -127,7 +144,7 @@ Location:
         Type: Map
         HasPKMN: No
         WildTableList:
-        LocationReqs: SS Aqua Entrance
+        LocationReqs: Board SS Aqua
         FlagReqs:
             - Sailor Requested
         ItemReqs:
