--- a/Map Data/RuinsOfAlph.yml
+++ b/Map Data/RuinsOfAlph.yml
@@ -216,13 +216,8 @@ Location:
                 TrainerList:
                 WarpReqs: Ho-Oh Chamber
                 Sublocations:
-
-
-
-
-
             -
-                Name: Ruins of Alph Rope Chamber Access
+                Name: Ruins of Alph Rope Chamber Access No Shopsanity
                 FileName:
                 Type: Map
                 HasPKMN: No
@@ -237,7 +232,22 @@ Location:
                 TrainerList:
                 WarpReqs:
                 Sublocations:
-
+            -
+                Name: Ruins of Alph Rope Chamber Access
+                FileName:
+                Type: Map
+                HasPKMN: No
+                WildTableList:
+                LocationReqs: Ruins of Alph Rope Chamber Access No Shopsanity
+                FlagReqs:
+                ItemReqs:
+                FlagsSet:
+                ReachableReqs:
+                Code:
+                Text:
+                TrainerList:
+                WarpReqs:
+                Sublocations:
             -
                 Name: Ruins of Alph Rope Chamber Access
                 FileName:
@@ -256,7 +266,6 @@ Location:
                 TrainerList:
                 WarpReqs:
                 Sublocations:
-
             -
                 Name: Ruins of Alph Rope Chamber
                 FileName:
@@ -463,7 +472,7 @@ Location:
                         TrainerList: 
                         Sublocations:
             -
-                Name: Ruins of Alph Water Chamber Access
+                Name: Ruins of Alph Water Chamber Access No Shopsanity
                 FileName:
                 Type: Map
                 HasPKMN: No
@@ -484,7 +493,23 @@ Location:
                 Text:
                 TrainerList:
                 Sublocations:
-
+            -
+                Name: Ruins of Alph Water Chamber Access
+                FileName:
+                Type: Map
+                HasPKMN: No
+                WildTableList:
+                LocationReqs:
+                  - Ruins of Alph Water Chamber Access No Shopsanity
+                FlagReqs:
+                ItemReqs:
+                FlagsSet:
+                NormalItem:
+                ReachableReqs:
+                Code:
+                Text:
+                TrainerList:
+                Sublocations:
             -
                 Name: Ruins of Alph Water Chamber Access
                 FileName:
